firmware/defmt-test/macros/tests/ui/before_each-has-should-error-macro.stderr
error: `#[should_error]` is not allowed on the `#[before_each]` function
 --> tests/ui/before_each-has-should-error-macro.rs:7:8
  |
7 |     fn init() {}
  |        ^^^^
