firmware/defmt-test/macros/tests/ui/before_each-has-should-error-macro.rs
fn main() {}

#[defmt_test_macros::tests]
mod tests {
    #[before_each]
    #[should_error]
    fn init() {}
}
